Revision history for Perl distribution PathTools.

 - Added lots more tests for Cygwin. [Reini Urban]

 - Major fixes on Win32, including a rewrite of catdir(), catfile(),
   and canonpath() in terms of a single body of code. [Heinrich Tegethoff]

 - canonpath() with no arguments and canonpath(undef) now consistently
   return undef on all platforms. [Spotted by Peter John Edwards]

 - Fixed splitdir('') and splitdir(undef) and splitdir() to return an
   empty list on VMS and MacOS, like it does on other platforms.
   [Craig A. Berry]

3.25 - Mon May 21 21:07:26 2007

 - Added a workaround for auto-vivication-of-function-args Perl bug
   (triggered by OS/2-specific code). [Ilya Zakharevich]

 - Sync with a bleadperl change: miniperl can no longer use Win32::*
   functions because it cannot load Win32.dll. [Jan Dubois]

 - We only need to load ppport.h when building outside the core, so we
   avoid using it when in the core.
 
3.24 - Sun Nov 19 22:52:49 2006

 - Fixed a bug in the $ENV{PWD}-updating of Cwd::chdir() when a
   dirhandle is passed in. [Steve Peters]

 - Add perl 5.005 to the list of requirements in the
   Build.PL/Makefile.PL/META.yml.

 - Add ExtUtils::CBuilder to the list of build_requires in Build.PL.

 - Improved performance of canonpath() on Unix-ish platforms - on my
   OS X laptop it looks like it's about twice as fast. [Ruslan Zakirov]

3.23 - Wed Oct 11 12:11:25 2006

 - Yet more Win32 fixes (sigh... seems like I'm fighting a neverending
   waterbed...).  This time, fixed file_name_is_absolute() to know
   what it's doing when the path includes a volume but a relative
   path, like C:foo.txt .  This bug had impact in rel2abs() on Win32
   too.

3.22 - Mon Oct  9 21:50:52 2006

 - Fixed the t/crossplatform.t test on Win32 (and possibly other
   volume-aware platforms) now that rel2abs() always adds a drive
   letter. [Reported by several parties]

3.21 - Wed Oct  4 21:16:43 2006

 - Added a bunch of X<> tags to the File::Spec docs to help